@@ -130,12 +130,12 @@ define( function( require ) {
     // popups
     this.popupNode = null; // @private looks like a dialog, tells user how they did
     this.popupLocationProperty = new Property( new Vector2( this.layoutBounds.centerX, this.boxesNode.top + 20 ) ); // @private
-    // listeners
+    this.popupDragBounds = this.layoutBounds.dilatedXY( -20, -20 );
     this.showWhyButtonListener = function() {
-      self.swapPopups( new NotBalancedVerboseNode( self.popupLocationProperty, self.model.currentEquationProperty, self.hideWhyButtonListener, self.model.balancedRepresentation, self.aligner ) );
+      self.swapPopups( new NotBalancedVerboseNode( self.popupLocationProperty, self.popupDragBounds, self.model.currentEquationProperty, self.hideWhyButtonListener, self.model.balancedRepresentation, self.aligner ) );
     };
     this.hideWhyButtonListener = function() {
-      self.swapPopups( new NotBalancedTerseNode( self.popupLocationProperty, self.showWhyButtonListener ) );
+      self.swapPopups( new NotBalancedTerseNode( self.popupLocationProperty, self.popupDragBounds, self.showWhyButtonListener ) );
     };
 
     // Monitor the game state and update the view accordingly.
@@ -295,7 +295,6 @@ define( function( require ) {
     /**
      * Controls the visibility of the games results "popup".
      * This tells the user whether their guess is correct or not.
-     *
      * @param visible
      */
     setPopupVisible: function( visible ) {
@@ -309,13 +308,13 @@ define( function( require ) {
         // evaluate the user's answer and create the proper type of node
         var equation = this.model.currentEquation;
         if ( equation.balancedAndSimplified ) {
-          this.popupNode = new BalancedNode( this.popupLocationProperty, this.model.currentPoints );
+          this.popupNode = new BalancedNode( this.popupLocationProperty, this.popupDragBounds, this.model.currentPoints );
         }
         else if ( equation.balanced ) {
-          this.popupNode = new BalancedNotSimplifiedNode( this.popupLocationProperty );
+          this.popupNode = new BalancedNotSimplifiedNode( this.popupLocationProperty, this.popupDragBounds );
         }
         else {
-          this.popupNode = new NotBalancedTerseNode( this.popupLocationProperty, this.showWhyButtonListener );
+          this.popupNode = new NotBalancedTerseNode( this.popupLocationProperty, this.popupDragBounds, this.showWhyButtonListener );
         }
         this.gamePlayNode.addChild( this.popupNode ); // visible and in front
       }
@@ -325,6 +324,7 @@ define( function( require ) {
      * Replaces the current popup with a new popup.
      * This is used for the "Not Balanced" popup, which has terse and verbose versions.
      * The new popup is positioned so that it has the same top-center as the old popup.
+     * @private
      */
     swapPopups: function( newPopupNode ) {
       this.gamePlayNode.removeChild( this.popupNode );
